# LyricVault

./: .gitignore  CHANGELOG.md  CLIENT_ARCHIVE.md  Cargo.toml  EV_CODE_SIGNING_READINESS.md  LICENSE  LyricVault_Full_Text.txt  MOBILE_DEVELOPMENT.md  README.md  RISK_ASSESSMENT_v0.4.2.md  SETUP_PREALPHA.ps1  VERIFY_RELEASE.ps1  build_debug.txt  build_log.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  check_syntax.py  debug_ytdlp.py  electron-builder.yml  fix_audit_v0.3.5.md  gemini_prompt_v0.3.2_backend_gate.md  gemini_prompt_v0.3.2_frontend_gate.md  gemini_prompt_v0.3.2_supercheck_release_pro.md  gemini_prompt_v0.3.5_backend_gate.md  gemini_prompt_v0.3.5_frontend_gate.md  gemini_prompt_v0.3.5_supercheck_release_pro.md  gemini_prompt_v0.4.2_supercheck_release_pro_HIGH.md  gemini_prompt_v0.4.3_dynamic.md  git_history.txt  gpt_5_3_codex_prompt.md  package-lock.json  package.json  pytest.ini  pytest_output.txt  release_checksums_v0.3.2.txt  release_checksums_v0.3.5.txt  release_checksums_v0.4.2.txt  release_checksums_v0.4.3.txt  release_checksums_v0.4.4.txt  (+26 more)
.github/workflows/: backend-tests.yml  desktop-tauri.yml  flutter-ci.yml  security-audit.yml
api-monitor/: monitor.py  requirements.txt
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
backend/: audit_test_adversarial.py  audit_test_cors.py  check_lyrics.py  conftest.py  lyricvault_v2.db-shm  lyricvault_v2.db-wal  main.py  reproduce_ingestor.py  reproduce_ytdlp.py  requirements.lock.txt  requirements.txt  test_api_contract.py  test_blocking.py  test_embed_env.py  test_ffmpeg_winget.py  test_gemini_integration.py  test_ingest.py  test_key_debug.py  test_path_traversal.py  test_search.py  test_social.py  test_url_parsing.py  test_worker_heartbeat.py  trigger_retry.py  verify_gemini.py  verify_ingest.py  verify_key.py  verify_search.py  verify_syncedlyrics.py  verify_v0.3.0.py
backend/database/: database.py  migrations.py  models.py
backend/services/: gemini_service.py  ingestor.py  lyricist.py  settings_service.py  worker.py  ytdlp_manager.py
backend/tests/: test_auth_required.py  test_backend_port_env.py  test_gemini_model_fallback.py  test_jobs_queue_split.py  test_lyric_status_modes.py  test_migration_registry.py  test_migration_requeue.py  test_verify_release.py  test_worker_ytdlp_job.py  test_ytdlp_manager.py  test_ytdlp_system_endpoint.py
backend/tools/: bridge_cli.py  db_migrate.py
backend/utils/: dpapi.py  event_bus.py  lrc_validator.py  rate_limiter.py  ytdlp_loader.py
crates/lv_core/: Cargo.toml
crates/lv_core/src/: lib.rs
crates/lv_events/: Cargo.toml
crates/lv_jobs/: Cargo.toml
crates/lv_jobs/src/: lib.rs
crates/lv_lyrics/: Cargo.toml
crates/lv_lyrics/src/: lib.rs
crates/lv_media/: Cargo.toml
crates/lv_settings/: Cargo.toml
crates/lv_settings/src/: lib.rs
crates/lv_types/: Cargo.toml
desktop_client/: README.md  pubspec.yaml
desktop_client/lib/: main.dart
electron/: main.js  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
mobile_client/: README.md  pubspec.yaml
scripts/: audit-python.ps1  build-tauri-portable.ps1  check-python-lock-sync.ps1  create_icon.py  desktop-env-doctor.ps1  extract_all_text.ps1  fetch-runtime-assets.ps1  flutter_bridge.py  generate_assets.py  generate_geometric_icon.py  generate_icon.py  generate_icon_simple.py  installer.nsh  run-tauri.ps1  runtime-assets.lock.json  setup-python.ps1  test_standalone_api.py  update-ytdlp.ps1
(+47 files in other folders)
