[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/lv_types",
  "crates/lv_events",
  "crates/lv_settings",
  "crates/lv_core",
  "crates/lv_media",
  "crates/lv_lyrics",
  "crates/lv_jobs",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.0-prealpha.4"
license = "MIT"
authors = ["McEveritts"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
once_cell = "1.20"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
urlencoding = "2.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
