[package]
name = "lv_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
lv_settings = { path = "../lv_settings" }
lv_types = { path = "../lv_types" }
md5.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile = "3.15"
