[package]
name = "lv_lyrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lv_core = { path = "../lv_core" }
lv_settings = { path = "../lv_settings" }
lv_types = { path = "../lv_types" }
once_cell.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
