[package]
name = "lv_settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
lv_types = { path = "../lv_types" }
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
windows-sys.workspace = true

[dev-dependencies]
tempfile = "3.15"
